src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Company</fullName>
        <description>Company</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer</fullName>
        <description>Customer</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Referral</fullName>
        <description>Referral</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accommodation__c</fullName>
        <label>Accommodation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityDateTime__c</fullName>
        <description>ActivityDateTime</description>
        <inlineHelpText>ActivityDateTime</inlineHelpText>
        <label>ActivityDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>This should be a formula field and calculate age from DateOfBirth field.</description>
        <formula>FLOOR((TODAY() - DOB__c)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicationFee__c</fullName>
        <label>Application Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApptusQuoteID__c</fullName>
        <label>Apptus Quote ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedQueue__c</fullName>
        <label>Assigned Queue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedSalesOffice__c</fullName>
        <description>Which sales office Lead is assigned currently, this can be changed</description>
        <label>Assigned SalesOffice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BoughtName__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this name was acquired  by buying a name database</description>
        <label>BoughtName</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignName__c</fullName>
        <label>Campaign Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignQuestionsAnswer__c</fullName>
        <label>Campaign Questions Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Reasons__c</fullName>
        <description>If the sales coordinator is changing the program, he should be forced to select one among the change reasons:</description>
        <label>Change Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Does not want to travel in group</fullName>
                </value>
                <value>
                    <fullName>Friend is travelling with another program</fullName>
                </value>
                <value>
                    <fullName>It’s a parent</fullName>
                </value>
                <value>
                    <fullName>New Activity (only automatic ones - during imports we assign this reason when new activity comes in).</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Wants less academic</fullName>
                </value>
                <value>
                    <fullName>Wants more academic</fullName>
                </value>
                <value>
                    <fullName>Wants to travel in a group</fullName>
                </value>
                <value>
                    <fullName>Wrong age</fullName>
                </value>
                <value>
                    <fullName>Wrong dates</fullName>
                </value>
                <value>
                    <fullName>Wrong destination</fullName>
                </value>
                <value>
                    <fullName>Wrong length</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseMainReason__c</fullName>
        <label>Close Main Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Had no intention (ordered by mistake, didn&apos;t understand what it was for at all)</fullName>
                </value>
                <value>
                    <fullName>Lost to competitor (definitely try again)</fullName>
                </value>
                <value>
                    <fullName>Had intention and money, but chose to do something else (soft no, we can try next year)</fullName>
                </value>
                <value>
                    <fullName>Has no means</fullName>
                </value>
                <value>
                    <fullName>Finds EF offer too expensive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseSubReason__c</fullName>
        <label>Close Sub Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CloseMainReason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor is cheaper</fullName>
                </value>
                <value>
                    <fullName>Has better reputation</fullName>
                </value>
                <value>
                    <fullName>Better Service</fullName>
                </value>
                <value>
                    <fullName>Competitors has more things included in the price</fullName>
                </value>
                <value>
                    <fullName>More flexible</fullName>
                </value>
                <value>
                    <fullName>Better offer</fullName>
                </value>
                <value>
                    <fullName>Replied faster</fullName>
                </value>
                <value>
                    <fullName>Bigger brand</fullName>
                </value>
                <value>
                    <fullName>My friend is going with a competitor</fullName>
                </value>
                <value>
                    <fullName>Has local office</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CombinedEmail__c</fullName>
        <formula>Email+&apos; &apos;+Email2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CombinedPhone__c</fullName>
        <formula>MobilePhone+&apos; &apos;+HomePhone__c+&apos; &apos;+Other_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreationType__c</fullName>
        <description>this field is used to know the importing as lead/Opportunity/Account
Story # : SF280</description>
        <label>Creation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                    <label>Lead</label>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creation_Method__c</fullName>
        <label>Creation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merge_Interest</fullName>
                </value>
                <value>
                    <fullName>Interest_datafix</fullName>
                </value>
                <value>
                    <fullName>SF_Interest</fullName>
                </value>
                <value>
                    <fullName>Interest</fullName>
                </value>
                <value>
                    <fullName>Excel Import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>Date of Birth</description>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DepartureCity__c</fullName>
        <label>Departure City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DestinationCode__c</fullName>
        <label>Destination Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceType__c</fullName>
        <label>Device Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNotMail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag to store if no mail should be sent to customer</description>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag to store if no SMS should be sent</description>
        <label>Do Not SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotSendNewsLetters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag to store if customer does not want to receive newsletters</description>
        <label>Do Not Send News Letters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotSendPromoEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag to store if customer does not want to receive promotional emails</description>
        <label>Do Not Send Promo Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoubleOptInTimeStamp__c</fullName>
        <formula>IF( DoubleOptIn__c = TRUE ,  NOW() ,  NULL )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Double Opt In Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DoubleOptIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateRecordSets__c</fullName>
        <description>This field is used to find the possible duplicates while testing.</description>
        <inlineHelpText>This field is used to find the possible duplicates while testing.</inlineHelpText>
        <label>Duplicate Record Sets</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <description>This field is created for the secondary email and is replacing student email fields</description>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email2optout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field will store if customer opts out of receiving emails on email2 address</description>
        <label>Email2 opt out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Etag__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Etag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FalseBrochureProgramCodes__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>False Brochure Program Codes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormSubmissionID__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <externalId>true</externalId>
        <label>FormSubmission ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of customer</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GoPageURL__c</fullName>
        <description>Url for GoPage</description>
        <label>GoPageURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HadAddressonCreation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If customer gave address when contact was created – Maybe on opportunity??</description>
        <label>Had Address on Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>InfoMeetingID__c</fullName>
        <label>InfoMeeting ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InsertBy__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Insert By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsertDate__c</fullName>
        <label>Insert Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InsertTime__c</fullName>
        <description>this is captured to differentiate between incoming and exiting leads.</description>
        <label>DCBatchInsertTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InterestedToTravelInGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to store if customer wants to travel in group or individually</description>
        <label>InterestedToTravelInGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvalidEmail1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If primary email is invalid</description>
        <label>Invalid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvalidEmail2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If student email2 is invalid</description>
        <label>Invalid Email2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDupeProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be default false and after this record is run through dupe check then this should be set as true</description>
        <label>Is Dupe Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDupe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once it is identified as Dupe, this flag will be set for further processing</description>
        <label>Is Dupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEBrochure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Is EBrochure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExpressCall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ExpressCall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsJunior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Junior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsParent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If is parent whom we are talking ??? (when from the website based on the box on the form)</description>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is UP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyWord__c</fullName>
        <label>Key Word</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LatestEntrySourceCode__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Latest Entry Source Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestEtag__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Latest Etag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestKeywords__c</fullName>
        <label>Latest Keywords</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LatestPartnerCode__c</fullName>
        <label>Latest Partner Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <label>Lead Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AP Reply Card</fullName>
                </value>
                <value>
                    <fullName>APP Reply Card</fullName>
                </value>
                <value>
                    <fullName>Aupair Kft</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>CLT Reply Card</fullName>
                </value>
                <value>
                    <fullName>Convert</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>E-Mail</fullName>
                </value>
                <value>
                    <fullName>Exhibition/Fair</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Gewinnspiel</fullName>
                </value>
                <value>
                    <fullName>HSY Reply Card</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>LS Reply Card</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Mobile Site</fullName>
                </value>
                <value>
                    <fullName>Multi-Flyer</fullName>
                </value>
                <value>
                    <fullName>Multi-Replycard</fullName>
                </value>
                <value>
                    <fullName>Not known</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
                <value>
                    <fullName>Reply Card</fullName>
                </value>
                <value>
                    <fullName>Reply Card EFC</fullName>
                </value>
                <value>
                    <fullName>Reply Card FD</fullName>
                </value>
                <value>
                    <fullName>Reply Card LT</fullName>
                </value>
                <value>
                    <fullName>SCH Reply Card</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainLanguage__c</fullName>
        <description>Customer native language (this language will be used to communicate with customer)</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MainLanguage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <description>Customers Nationality</description>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Nationality1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Opportunity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <description>This is to store a secondary number</description>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PartnerCode__c</fullName>
        <label>Partner Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pos_InterestId__c</fullName>
        <description>This will be reference of Poseidon Interest_id</description>
        <label>Pos_InterestId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product to which lead belongs</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Program to which Lead belongs</description>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuotationID__c</fullName>
        <label>Quotation ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RankingProbability__c</fullName>
        <label>RankingProbability</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReadyForRanking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once the dupe check process is completed, this flag will be set</description>
        <label>Ready For Ranking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordSharingKey__c</fullName>
        <formula>If(ISPICKVAL(Program__c,&quot;MULTI&quot;),TEXT(Market__c) &amp;&quot;_&quot; &amp; TEXT(SalesOffice__c) &amp;&quot;_MULTI&quot;
,TEXT(Market__c) &amp;&quot;_&quot; &amp; TEXT(SalesOffice__c) &amp;&quot;_&quot;&amp; TEXT(Program__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordSharingKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region</description>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <label>RequestType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RequestType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReservedArticles__c</fullName>
        <label>Reserved Articles</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReservedCoursePrice__c</fullName>
        <label>Reserved Course Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReservedPrice__c</fullName>
        <label>Reserved Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesOffice__c</fullName>
        <label>SalesOffice</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SchoolCity__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>School City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolID__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>School ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolName__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>School Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceCodeAuto__c</fullName>
        <label>Source Code Auto</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceCodeGroup__c</fullName>
        <label>Source Code Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartWhen__c</fullName>
        <label>Start When</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used by the integration system to archive the leads.</description>
        <label>To Be archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Transportation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triton_Id__c</fullName>
        <description>Triton Id</description>
        <inlineHelpText>Triton Id</inlineHelpText>
        <label>Triton Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserSelectedSourceCode__c</fullName>
        <label>User Selected Source Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebOnlinePaymentTXLogID__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Web Online Payment TX Log ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Web2Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Web2Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAccountMerge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is used for lead to account merge.</description>
        <label>isAccountMerge</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>IsDupe__c</columns>
        <columns>IsDupeProcessed__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dupecheck_Records</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>IsDupe__c</columns>
        <columns>IsDupeProcessed__c</columns>
        <columns>ReadyForRanking__c</columns>
        <columns>InsertTime__c</columns>
        <columns>Ranking__c</columns>
        <columns>SalesOffice__c</columns>
        <columns>Market__c</columns>
        <columns>Product__c</columns>
        <columns>Program__c</columns>
        <columns>ActivityDateTime__c</columns>
        <columns>Creation_Method__c</columns>
        <columns>CreationType__c</columns>
        <columns>RecordSharingKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>Dupecheck Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>IsDupe__c</columns>
        <columns>IsDupeProcessed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Company</fullName>
        <active>true</active>
        <businessProcess>Company</businessProcess>
        <description>School or Organizations</description>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <businessProcess>Customer</businessProcess>
        <label>Customer</label>
    </recordTypes>
</CustomObject>